Remove usage of commons-lang3